--- a/src/components/blog/BlogList.css
+++ b/src/components/blog/BlogList.css
@@ -6,6 +6,13 @@
   flex-wrap: wrap;
 }
 
+.bloglist-loading{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 .bloglist-blogs {
   display: flex;
   /* align-items: center; */
