--- a/src/components/home/Intro.css
+++ b/src/components/home/Intro.css
@@ -64,17 +64,12 @@
     font-size: 1.25rem;
 }
 
-.btns{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-    margin-top: 1rem;
-}
 
 .btn{
     outline: none;
     font-size: 1rem;
+    display: flex;
+    align-items: center;
     margin: 50px 20px 50px 0px;
     border-radius: 50px;
     border: 2px solid #212D40;
@@ -86,6 +81,10 @@
     font-weight: 600;
     transition: all 0.3s ease;
     box-shadow: 0px 0 10px 5px rgba(0, 0, 0, 0.2);
+}
+
+.download-icon{
+    margin-left: 5px;
 }
 
 .btn:hover{
