Updated the download Resume Button

--- a/src/components/home/Intro.css
+++ b/src/components/home/Intro.css
@@ -84,7 +84,11 @@
 }
 
 .download-icon{
-    margin-left: 5px;
+    margin-left: 10px;
+    background-color: white;
+    border-radius: 100%;
+    color: #212D40;
+    padding: 5px;
 }
 
 .btn:hover{
