--- a/src/components/home/Skills.css
+++ b/src/components/home/Skills.css
@@ -27,7 +27,7 @@
 }
 
 .skills-list > .skill {
-  margin: 10px 45px;
+  margin: 20px 45px;
 }
 
 .skills-list > .skill > p {
@@ -35,3 +35,14 @@
   font-size: 1.2rem;
 }
 
+.skill-content{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.skill-img{
+  width: 50px;
+  height: 50px;
+  margin: 10px 5px;
+}
