--- a/src/components/home/Portfolio.css
+++ b/src/components/home/Portfolio.css
@@ -1,18 +1,81 @@
-.portfolio{
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    line-height: 0.5;
-    color: #212D40;
+.portfolio {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  line-height: 0.5;
+  color: #212d40;
+  box-sizing: border-box;
+  margin-top: 20px;
 }
 
-.portfolio-title-1{
-    font-size: 1.5rem;
-    color: #6290C3;
+.portfolio-title-1 {
+  font-size: 1.5rem;
+  color: #6290c3;
 }
 
-.portfolio-title-2{
-    font-size: 2rem;
+.portfolio-title-2 {
+  font-size: 2rem;
+}
+
+.portfolio-filter {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.portfolio-filter .category {
+  text-align: center;
+  cursor: pointer;
+  margin: 15px 5px;
+  border: 3px solid #6290c3;
+  padding: 10px 15px;
+  border-radius: 40px;
+  color: #6290c3;
+}
+
+.portfolio-filter-active {
+  color: white !important;
+  background-color: #6290c3;
+}
+
+.portfolio-projects {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 50px 0;
+  flex-wrap: wrap;
+}
+
+.portfolio-project {
+  margin: 20px;
+  /* background-color: #6290c3; */
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
+  color: #121212;
+  border-radius: 0.2vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  transition: all 0.2s ease-out;
+}
+
+.portfolio-project:hover{
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
+    transform: scale(1.001);
+}
+
+.portfolio-project img {
+  width: 100%;
+  height: 200px;
+  border-top-left-radius: 0.2vw;
+  border-top-right-radius: 0.2vw;
+}
+
+.portfolio-project h2 {
+  padding: 10px 20px;
+  line-height: 1.2;
+  text-align: center;
 }
