--- a/src/components/home/Intro.css
+++ b/src/components/home/Intro.css
@@ -98,7 +98,7 @@
 
 
 #page-pic{
-    width: 350px;
+    width: 22.25rem;
     position: absolute;
     right: 0;
     bottom: 0;
@@ -131,5 +131,14 @@
 
     100%{
         transform: translateY(-100px);
+    }
+}
+
+@media only screen and (max-width: 600px){
+    .about-me{
+        line-height: 1; 
+    }
+    #page-pic{
+        display: none;
     }
 }
