--- a/src/components/home/Skills.css
+++ b/src/components/home/Skills.css
@@ -5,7 +5,7 @@
   justify-content: center;
   flex-direction: column;
   line-height: 0.7;
-  margin-bottom: 3.125rem;
+  margin: 5.125rem 0;
   position: relative;
 }
 
@@ -27,7 +27,7 @@
 }
 
 .skills-list > .skill {
-  margin: 20px 45px;
+  margin: 1.25rem 2.8125rem;
 }
 
 .skills-list > .skill > p {
@@ -45,4 +45,10 @@
   width: 50px;
   height: 50px;
   margin: 10px 5px;
+}
+
+@media only screen and (max-width: 600px){
+  .skills-list{
+    flex-direction: column;
+  }
 }
